# Stock-Analyze-System

./: .gitignore  .infisical.json.example  HOW_TO_USE.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements_specification.md
config/: edinet_taxonomy_mapping.yaml  ifrs_mapping.yaml  settings.yaml.example  us_gaap_mapping.yaml
docs/: RAGtest_debug.md  additional-refactoring-candidates-2026-05-17.md  adr-004-e2e-verification.md  analysis-failures-root-cause.md  analysis-jobs-runbook.md  current-work.md  extractor-pattern-verification-2026-05-17.md  refactoring-candidates-2026-05-17.md  step3-reasoning-runaway-verification.md  system-overview.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/adr/: 001-stooq-historical-price-source.md  002-filing-content-auto-recovery.md  003-yahoo-batch-api.md  004-sec-filing-section-extractor.md  005-living-docs-three-layer.md
docs/audit/: 2026-04-08-comprehensive-audit.md
scripts/: cron-daily-update.sh  cron-screening-enrich.sh  cron-valuation-update.sh  infisical-run  rag_inference_test.py  rebuild_index.py  verify_extractor_all_patterns.py  verify_refactoring_phase.py  verify_step3_reasoning_runaway.py
scripts/gen_docs/: __main__.py  cli_reference.py  coordinator.py  dependency_graph.py  module_index.py
scripts/generate_fixtures/: gen_valuation_golden.py  gen_verification_golden.py  gen_xbrl_golden.py
src/PyPDF2/: __init__.py
src/stock_analyze_system/: __init__.py  __main__.py  config.py  exceptions.py  logging_config.py
tests/: conftest.py
tests/benchmarks/: test_bulk_upsert_perf.py  test_filing_sync_perf.py
tests/e2e/: test_analysis_queue_end_to_end.py
tests/fixtures/: screening_universe.py  sec_company_tickers_payload.py  yahoo_screening_responses.py
tests/integration/: conftest.py  test_analysis_worker_lifecycle.py  test_event_loop_regression.py  test_filings_download_e2e.py  test_llamacpp_server.py  test_service_assembly.py  test_stooq_download.py  test_yahoo_batch_enrich.py
tests/js/: analysis_status.test.mjs  queue_panel.test.mjs  rag_progress.test.mjs  tabs.test.mjs  visualization_progress.test.mjs
tests/unit/: test_config.py  test_db_engine.py  test_enums.py  test_exceptions.py  test_infisical_run_script.py  test_logging_config.py  test_models.py  test_package_contracts.py  test_rag_inference_test_script.py  test_shared_formatters.py
(+376 files in other folders)
