[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyze-system"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "tabulate>=0.9",
    "litellm>=1.83,!=1.82.7,!=1.82.8",
    "pymupdf>=1.26",
    "weasyprint>=68,<69",
    "defusedxml>=0.7",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    # Optional PageIndex compatibility: PageIndex imports legacy PyPDF2 and dotenv;
    # this project supplies pypdf/PyPDF2 compatibility when PageIndex is installed.
    "pypdf>=5.0,<6",
    "python-dotenv>=1.0",
    "edgartools>=5.31.2",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pytest-cov",
    "ruff",
]
vllm = ["vllm>=0.16.0"]

[project.scripts]
stock-analyze = "stock_analyze_system.__main__:main_entry"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
markers = [
    "rag_model(name): テストで使用するモデル名をマーク（タイミングレポート用）",
    "characterization: リファクタ保護用の振る舞い固定テスト",
    "integration: 結合テスト (実DB・サービス組立て経由)",
    "external_llamacpp: 外部 llama.cpp OpenAI互換サーバーを必要とする手動実行テスト",
    "benchmark: 性能計測テスト (デフォルト除外、手動 -m benchmark で実行)",
]
addopts = ["-m", "not benchmark"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stock_analyze_system = [
    "web/templates/**/*.html",
    "web/static/*",
]

[tool.coverage.run]
# FastAPI TestClient は anyio/asyncio を別スレッドで実行するため、
# thread/greenlet を両方指定してカバレッジ計測の取りこぼしを防ぐ。
concurrency = ["thread", "greenlet"]
source = ["src/stock_analyze_system"]

[tool.coverage.report]
exclude_also = [
    # 型チェック用 import
    "if TYPE_CHECKING:",
    # 防御的 re-raise (上位で処理)
    "raise NotImplementedError",
    # main ガード
    "if __name__ == .__main__.:",
    # PageIndex 外部 lib 呼び出しは実 llama-server 依存で単体テスト困難
    # (integration/test_llamacpp_server.py で疎通のみ検証)
    "async def _build_index_async\\(",
    "async def _generate_summaries_safe\\(",
]
